# fastapi-gradio-starter

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.py
application/: api.py  llm.py  main.py  ui.py
